@@ -27,7 +27,7 @@
 <header class="navbar navbar-inverse bs-docs-nav" role="banner">
 <div class="container">
   <div class="navbar-header">
-    <a href="http://hadoop.apache.org/core" class="navbar-brand">Hadoop</a>
+    <div class="navbar-brand">Hadoop</div>
   </div>
 
   <ul class="nav navbar-nav" id="ui-tabs">
@@ -64,7 +64,7 @@
 
 <div class="row">
   <hr />
-  <div class="col-xs-2"><p><a href="http://hadoop.apache.org/core">Hadoop</a>, 2014.</p></div>
+  <div class="col-xs-2"><p>Hadoop, 2014.</p></div>
   <div class="col-xs-1 pull-right"><a style="color: #ddd" href="dfshealth.jsp">Legacy UI</a></div>
 </div>
 </div>
