@@ -126,6 +126,6 @@
     </script><script type="text/javascript" src="explorer.js">
     </script>
     <hr />
-    <p><a href="http://hadoop.apache.org/core">Hadoop</a>, 2013.</p>
+    <p>Hadoop, 2014.</p>
   </body>
 </html>
