@@ -403,6 +403,9 @@ Release 2.4.0 - UNRELEASED
     HDFS-6080. Improve NFS gateway performance by making rtmax and wtmax
     configurable. (Abin Shahab via brandonli)
 
+    HDFS-6084. Namenode UI - "Hadoop" logo link shouldn't go to hadoop
+    homepage. (Travis Thompson via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-5790. LeaseManager.findPath is very slow when many leases need recovery
